// Copyright 2021 Paingha Joe Alagoa. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

option go_package = "email";

service Email {
    rpc SendEmail(SendEmailRequest) returns (SendEmailResponse){};
}

message SendEmailRequest {
    string Template = 1;
    string To = 2;
    string Subject = 3;
    map<string, string> BodyParam = 4;
}

message SendEmailResponse {
    string Message = 1;
}
